# anjl

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yml  linting.yml  release.yml  tests.yml
anjl/: __init__.py  _canonical.py  _dynamic.py  _heuristic.py  _layout.py  _plot.py  _rapid.py  _tree.py  _util.py  canonical.py  data.py  params.py
anjl/resources/: mosquitoes.npy
benchmark/: compare.ipynb  create.ipynb  pixi.toml  results.csv  results_anjl_1.0.1_canonical.csv  results_anjl_1.0.1_rapid.csv  results_anjl_1.1.0_canonical.csv  results_anjl_1.1.0_rapid.csv  results_anjl_1.1.1_canonical.csv  results_anjl_1.1.1_rapid.csv  results_anjl_1.2.0_canonical.csv  results_anjl_1.2.0_dynamic.csv  results_anjl_1.2.0_rapid.csv  results_anjl_1.4.0_canonical.csv  results_anjl_1.4.0_canonical_parallel.csv  results_anjl_1.4.0_dynamic.csv  results_anjl_1.4.0_dynamic_parallel.csv  results_anjl_1.4.0_rapid.csv  results_biopython_1.84.csv  results_biotite_1.0.1.csv  results_skbio_0.6.2.csv
benchmark/large/: samples.csv
benchmark/medium/: samples.csv
data/: .gitignore  create.ipynb  pixi.toml
data/xl/: samples.csv
docs/: index.ipynb  myst.yml  pixi.toml
notebooks/: bench.ipynb  plot.ipynb  profile.ipynb  profiling.ipynb  rapid_bench.ipynb  rapid_diagnostics.ipynb  rapid_plot.ipynb  rapid_profile.ipynb  tree.ipynb
notebooks/data/0b5748b994e124cca2bdb7bc34682af0/: params.json
notebooks/data/6d6ba5a54fade30470a83838d1de6358/: params.json
sandbox/: bench-new.ipynb  bench.ipynb  diagnostics.ipynb  plot.ipynb  profile.ipynb
tests/: test_canonical.py  test_data.py  test_dynamic.py  test_heuristic.py  test_layout.py  test_plot.py  test_rapid.py  test_tree.py  test_util.py
