[tool.poetry]
name = "anjl"
version = "0.1.0"
description = "A neighbour-joining library for Python."
authors = ["Alistair Miles <alimanfoo@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numba = "^0.60.0"
numpy = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
